--- a/editor/src/index.html
+++ b/editor/src/index.html
@@ -23,7 +23,7 @@
                 height: calc(75% - 25px);
                 position: absolute;
                 top: 0px;
-                left: 0px;
+                left: 50px;
                 padding-top: 50px;
                 padding-left: 25px;
                 padding-bottom: 0px;
@@ -86,31 +86,33 @@
             }
             #output-box {
                 position: fixed;
-                bottom: 0;
-                right: 50%;
-                transform: translate(50%);
+                bottom: 0px;
+                left: 0px;
                 width: 100%;
                 height: 25%;
                 outline: 2px solid rgb(78, 81, 86);
                 background: rgb(40, 44, 52);
                 color: white;
-                padding-left: 125px;
-                padding-right: 125px;
                 display: block;
                 z-index: 2;
-                overflow-y: scroll;
+                padding: 10px;
                 overflow-x: hidden;
+                overflow-y: auto;
                 scrollbar-width: thin;
                 scrollbar-color: rgb(89, 89, 89) rgb(40, 44, 52);
             }
             #numbers{
+                display: none;
+                padding-top: 50px;
                 position: absolute;
                 left: 0;
-                width: 10px;
+                width: max-content;
                 font-size: 10;
                 color: rgb(89, 89, 89);
-                z-index: 1;
+                z-index: 0;
                 height: max-content;
+                overflow: auto;
+                scrollbar-width: none;
             }
             .keyword { color: rgb(202, 25, 25); }
             .string { color: rgb(89, 248, 89); }
