Updated example and added escape chars

--- a/editor/src/index.html
+++ b/editor/src/index.html
@@ -122,6 +122,7 @@
             .number { color: rgb(174, 129, 255); }
             .operator { color: rgb(248, 248, 242); }
             .literal { color: rgb(89, 248, 89); }
+            .escape-char { color: rgb(119, 69, 212); }
 
             #hover-box{
                 position: absolute; 
