--- a/editor/src/index.html
+++ b/editor/src/index.html
@@ -114,15 +114,16 @@
                 overflow: auto;
                 scrollbar-width: none;
             }
-            .keyword { color: rgb(202, 25, 25); }
-            .string { color: rgb(89, 248, 89); }
-            .comment { color: rgb(157, 157, 157); font-style: italic; }
+            .keyword { color: var(--keyword-color); }
+            .string { color: var(--string-color); }
+            .comment { color: var(--comment-color); font-style: italic; }
+            .delimiter { color: var(--delimiter-color); }
+            .number { color: var(--number-color); }
+            .operator { color: var(--operator-color); }
+            .literal { color: var(--literal-color); }
+            .escape-char { color: var(--escape-char-color); }
+
             .line { white-space: pre; }
-            .delimiter { color: rgb(248, 248, 242); }
-            .number { color: rgb(174, 129, 255); }
-            .operator { color: rgb(248, 248, 242); }
-            .literal { color: rgb(89, 248, 89); }
-            .escape-char { color: rgb(119, 69, 212); }
 
             #hover-box{
                 position: absolute; 
